--- a/app/globals.css
+++ b/app/globals.css
@@ -31,8 +31,8 @@ h1 {
   text-shadow: 0 0.5px 0.5px currentColor, 0 0.5px 0.5px currentColor;
   font-size: 1.9rem;
   letter-spacing: 0.05em;
-  text-align: center;
-  padding: 0.5rem;
+ /*  text-align: center; */
+  padding: 0.5rem 0;
 }
 
 h2 {
