--- a/app/globals.css
+++ b/app/globals.css
@@ -36,19 +36,17 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
   font-size: 1.2rem;
 }
 
 h3 {
-  font-weight: 400;
   font-size: 1rem;
 }
 
 p {
-  font-optical-sizing: auto;
   font-weight: 300;
-  font-size: 0.85rem;
+  font-size: 0.82rem;
+  line-height: 1rem;
 }
 
 .error {
