--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+/* FONT IMPORT */
+@import url("https://use.typekit.net/xyx5wta.css");
+@import url("https://use.typekit.net/xyx5wta.css");
+
 /* ROOT */
 :root {
   --bg: #FEFDFF;
@@ -9,29 +13,27 @@
   --blue: #0081d7;
   --green: #55b77c;
   --gray: #F2F4F6;
-
+  --black: #112418;
+  --active: #DDF0E4;
 }
 
 body {
   overflow-y: hidden;
   overflow-x: hidden;
+  background-color: var(--bg);
 }
 
 /* FONTS */
-@import url("https://use.typekit.net/xyx5wta.css");
-@import url("https://use.typekit.net/xyx5wta.css");
-
-p, h2, h3 {
+p, h1, h2, h3 {
   font-family: "verdana", sans-serif;
   font-style: normal;
+  color: var(--black);
 }
 
 h1 {
-  font-family: "verdana", sans-serif;
   text-shadow: 0 0.5px 0.5px currentColor, 0 0.5px 0.5px currentColor;
   font-size: 1.9rem;
   letter-spacing: 0.05em;
- /*  text-align: center; */
   padding: 0.5rem 0;
 }
 
@@ -76,4 +78,10 @@ p {
   border-radius: 40px;
   text-shadow: 0 0 0.5px currentColor, 0 0 0.5px currentColor;
   letter-spacing: 0.03em;
+}
+
+/* MENU ICONS */
+.menu-icon {
+  height: 1.75rem;
+  width: auto;
 }
