--- a/app/globals.css
+++ b/app/globals.css
@@ -101,3 +101,66 @@ p {
   background-color: color-mix(in oklab, var(--blue) 50%, transparent);
   color: var(--blue);
 }
+
+/* BANNER */
+.banner-outer {
+  width: 100vw;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  height: 4.5rem;
+  margin-top: 1.5rem;
+}
+
+.banner {
+  max-width: 70vw;
+  min-width: 70vw;
+  height: 3rem;
+  border: 1px solid #8a1;
+  color: var(--bg);
+  background: #9b2;
+  border-radius: 15px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.15) inset, 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+/* .banner::before,
+.banner::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: -45vw;
+  top: 1rem;
+  width: 2rem;
+  border: 1.4rem solid #9b2;
+  border-radius: 15px;
+  border-right: 20px solid #791;
+  border-bottom-color: #94b81e;
+  border-left-color: transparent;
+} */
+
+.banner::before,
+.banner::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 1rem;
+  width: 3rem;
+  height: 2.8rem;
+  background: #9b2;
+
+  border-radius: 15px;
+}
+
+.banner::before {
+  left: 9vw;
+  clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 25% 50%, 0% 0%);
+}
+
+.banner::after {
+  right: 9.4vw;
+  left: auto;
+  border-left: 20px solid #791;
+  border-right: 20px solid transparent;
+  transform: scaleX(90deg);
+  clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 0 100%, 0% 50%, 0 0);
+}
