--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,6 @@
 }
 
 body {
-  overflow-y: hidden;
   overflow-x: hidden;
   background-color: var(--bg);
 }
@@ -67,16 +66,25 @@ p {
   padding-top: 5px;
 }
 
-/* INPUT FIELDS */
+/* --- INPUT FIELDS --- */
 .input {
   background-color: var(--gray);
   border-radius: 20px;
   padding: 0.55rem;
   padding-left: 10px;
-  margin-left: -0.3em;
+  /*  margin-left: -0.3em; */
 }
 
-/* CTA */
+/* login and registration inputs */
+.input-logreg {
+  margin-left: -0.3rem;
+}
+.input-logreg:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--cta);
+}
+
+/* --- CTA --- */
 .cta {
   background-color: var(--cta);
   padding: 0.5rem 2rem;
@@ -85,6 +93,7 @@ p {
   border-radius: 40px;
   text-shadow: 0 0 0.5px currentColor, 0 0 0.5px currentColor;
   letter-spacing: 0.03em;
+  width: 50vw;
 }
 
 /* --- ICONS --- */
@@ -115,7 +124,7 @@ p {
 .banner {
   max-width: 75vw;
   min-width: 75vw;
-  height: 3rem;
+  height: 2.5rem;
   border: 1px solid var(--dark-green);
   color: var(--bg);
   background: var(--green);
@@ -131,7 +140,7 @@ p {
   z-index: -1;
   top: 1rem;
   width: 3rem;
-  height: 2.8rem;
+  height: 2.3rem;
   background: var(--dark-green);
   border-radius: 15px;
 }
